# rure-ffi

./: rure-ffi.cabal
src/Data/Regex/: Rure.hs
src/Data/Regex/Rure/: FFI.hsc
test/: TestMain.hs
